Добавил новые сущности. Добавил миграцию. Настроил CORS.

--- a/Homework6/appsettings.json
+++ b/Homework6/appsettings.json
@@ -7,5 +7,17 @@
     }
   },
 
-  "AllowedHosts": "*"
+  //"ConnectionStrings": {
+  //  "Homework4Context": "User ID=postgres;Password=postgres;Host=localhost;Port=5432;Database=HomeworkSimbirSoft; Integrated Security=false;"
+  //},
+
+  "AllowedHosts": "*",
+
+  "jwtTokenConfig": {
+    "issuer": "TheBestWebAPI",
+    "audience": "TheBestWebAPI",
+    "accessTokenExpiration": 30,
+    "refreshTokenExpiration": 60,
+    "secret": "x6e8c3r5e7t3K67e8y9w2q6e8j45a45ne46"
+  }
 }
